Add FindMyDatabase libpq implementation; linking error caused by interfaces/libpq conflict with backend/libpq

--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -16,7 +16,8 @@ include $(top_builddir)/src/Makefile.global
 
 DIRS = access bootstrap catalog parser commands executor lib libpq \
 	main nodes optimizer port postmaster regex rewrite \
-	storage tcop tsearch utils $(top_builddir)/src/timezone
+	storage tcop tsearch utils $(top_builddir)/src/timezone \
+	$(top_builddir)/src/interfaces/libpq
 
 SUBSYSOBJS = $(DIRS:%=%/SUBSYS.o)
 
